# hexagon-game-bot

./: CMakeLists.txt  README.md  main.cpp  mylib.h  serverTCP.cpp
resources/: matrix2.mx
src/: hexagon_bot.cpp  hexagon_bot.h  main.cpp  tcp_server_linux.cpp  tcp_server_win.cpp
